--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.servlet.context-path=/board
+server.port=8080
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/board?serverTimezone=UTC
+spring.datasource.username=son
+spring.datasource.password=son
+spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
+
+mybatis.mapper-locations=mappers/**/*.xml
+mybatis.type-aliases-package=com.son.board.dto
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+spring.servlet.multipart.max-file-size=-1
+
+logging.level.com.ssafy.happyhouse=debug
